package com.hcmute.reservation.model.enums;

public enum ReservationStatus {
    CREATED, PENDING_PAYMENT, RESERVED, SEATED, COMPLETED, CANCELLED, NO_SHOW, EXPIRED
}