package com.hcmute.reservation.model.enums;

public enum ReservationType {
    ONLINE, WALK_IN
}