package com.hcmute.reservation.model.enums;

public enum TableStatus {
    AVAILABLE, OCCUPIED, OVERSTAY
}   