package com.hcmute.reservation.model.enums;

public enum UserRole {
    RECEPTIONIST, MANAGER
}