package com.hcmute.reservation.model.enums;

public enum WaitlistStatus {
    WAITING, MISSING, SEATED, SKIPPED
}